# bazel-parcel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
builddefs/: BUILD.bazel  index.bzl
builddefs/internal/: BUILD.bazel  js_library.bzl  js_package.bzl  launcher_template.sh  parcel.bzl  require.js
src/: BUILD.bazel  index.html  index.tsx
src/components/: BUILD.bazel  Button.tsx  ButtonLabel.jsx
